--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "ozonoterapia clinica",
     "ozonoterapia productos"
   ],
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "nodemailer": "^7.0.6"
+  }
 }
